# Meningioma

./: .flake8  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py  setup_ants.sh  setup_fsl.sh  setup_project.sh  try.py
docs/: data.md  dataset_generation.md  dataset_standarization.md  image_coresgistration.md  metrics_optimization_summary.md  noise_modelling.md  noise_modelling_impulse.md  resolution.md  utils.md  visualization_guide_superlearner.md
docs/figures/rawdata_stats/: patient_distribution_stats.csv
docs/figures/size_stats/: images_sizes.csv  segmentations_sizes.csv
docs/figures/super-resolution/: main.tex
jupyter/: exploration.ipynb  explore_metadata.ipynb  nrrd_headers.csv
meningioma/generator/: adquisition_dsGen.py
meningioma/generators/: adquisition_dsGen.py
meningioma/image_processing/: __init__.py  image_processing.py  interpolation.py
meningioma/stats/: data_analyzer.py
meningioma/utils/: adquisition_ds.py
report/: image_coresgistration.md
scripts/: adquisition_dsGen.py  data_analyzer.py  noise_modelling_validation.py
scripts/Dataset/: analyze.py  visualize_npz.py
scripts/MRI_Noise_Modelling/: analyze_impulse.sh  mutual_information_pipeline.py  noise_modelling_validation.py  responsibilities.mat  visualize_mri.py
scripts/dataset/: adquisition_dsGen.py  analyze_control_basline.py  analyze_sr.ipynb  dataset_analysis.py  explore_nature_ds.ipynb  explore_new.ipynb  explore_steps.ipynb  multi_depth_sr_results.ipynb  normalization_results.ipynb  plan_and_preprocess.py  synthmorph_shapes_3d.ipynb  try_pipeline.ipynb  try_pipeline.py  visualizations.py  voxel_spacing.ipynb
scripts/noise_modelling/: mutual_information_pipeline.py  noise_modelling_validation.py
scripts/noise_modelling/gaussian_random_markov_fields/: APURF_notes.md  anisotrophic_variograms.py  markov_pipeline.py  markov_pipeline_modular.py  noise_modelling_GRF.md  notes_code.md  pipeline_and_visualizations.py  variogram_fitting_experiment.py
scripts/noise_modelling/gaussian_random_markov_fields/3d_estimation/: 3d_pipeline.py  analyze_patient.py  analyze_results_patient.py  compute_pdfs_patient.py  generate_noise_volumes_patient.py  noise_generation_comparison.py  threedim_pipeline.py  vis_noise_estimation_vol.py  vis_steps_pipeline.py  visualizations.py
scripts/noise_modelling/gaussian_random_markov_fields/images/experiment_images/: 3d_field.vtk.vtr
scripts/noise_modelling/gaussian_random_markov_fields/notes/: noise_modelling_GRF.md
scripts/noise_modelling/gaussian_random_markov_fields/variogram_estimation_experiment/: Dockerfile  analyze.py  variogram_fitting_experiment.py
scripts/noise_modelling/mutual_information/: mutual_information_clustering.py  mutual_information_tuning.py  noise_modelling_mutual_info.md
scripts/segmentation/: convex_hull.py  segmentation_pipeline_contours.py  volume_segmentation_val.py
src/Meningioma/: __init__.py  setup.py
src/Meningioma/brats_men_2023/: README.md
src/Meningioma/brats_men_2023/nnUNet/preprocessing/: create_metadata_json.py  merge_and_convert.py
src/Meningioma/dataset_formatting/: README.md
src/Meningioma/dataset_formatting/nnUNet/: README.md
src/Meningioma/dataset_formatting/nnUNet/preprocessing/: merge_and_convert.py
src/Meningioma/dataset_formatting/nnUNet/scripts/: process.py
src/Meningioma/dataset_formatting/nnUNet/tools/: plan_and_preprocess_dataset.py  setup_folders.py
src/Meningioma/experimental/noise_estimation_grf/: README.md
src/Meningioma/experimental/noise_estimation_grf/image_processing/: interpolation.py  (+2 more)
src/Meningioma/image_processing/: __init__.py  image_processing.py  interpolation.py  k_space.py  noise_modelling.py  nrrd_processing.py  random_fields.py  segmentation.py
src/Meningioma/metrics/: metrics.py
src/Meningioma/noise_estimation_grf/: __init__.py  covariance_models.py  gaussian_random_fields.py  noise_estimation.py
src/Meningioma/preprocessing/: README.md  execute.py  execute_mreg.py  executer.py  metadata.py  planner.py  planner_threads.py
src/Meningioma/preprocessing/configs/: planner.yaml  registration_sri24.yaml  tc_registration_sri24.yaml
src/Meningioma/preprocessing/pipeline/: execute.py  planner.py  rm_pipeline.py
src/Meningioma/preprocessing/tools/: README.md  bias_field_corr_n4.py  casting.py  denoise_susan.py  hu_window.py  mask_standarization.py  nrrd_to_nifti.py  padding.py  remove_extra_channels.py  reorient.py  resample.py
src/Meningioma/src/: __init__.py
src/Meningioma/src/image_processing/: __init__.py  image_processing.py  interpolation.py  metrics.py  noise_modelling.py  nrrd_processing.py
src/Meningioma/src/metrics/: __init__.py  metrics.py
src/Meningioma/src/utils/: __init__.py  setup_env.py  statistical_manipulation.py
src/Meningioma/utils/: README.md  __init__.py  mask_standarization.py  npz_converter.py  nrrd_to_npz.py  parse_nrrd_header.py  segmentation.py  statistical_manipulation.py  voxel_spacing.py
src/mgmGrowth/experimental/: README.md
src/mgmGrowth/experimental/noise_estimation_grf/: __init__.py  gaussian_random_fields.py  noise_estimation.py  variograms.py
src/mgmGrowth/metrics/: __init__.py  metrics.py
src/mgmGrowth/preprocessing/: README.md  __init__.py
src/mgmGrowth/preprocessing/configs/: planner.yaml  registration_sri24.yaml
src/mgmGrowth/preprocessing/pipeline/: execute.py  metadata.py  planner.py  rm_pipeline.py
src/mgmGrowth/preprocessing/tests/: README.md  preprocess_patient.py
src/mgmGrowth/preprocessing/tools/: bias_field_corr_n4.py  brain_mask_utils.py  casting.py  denoise_susan.py  intensity_normalization.py  nrrd_to_nifti.py  padding.py  qa_utils.py
src/mgmGrowth/preprocessing/utils/: confirm_pulse.py  dataset_state_vis.py  dcmfolder2nrrd.py  possible_pulse.py  reorganize_rawdata.py  vis_control_pulse_availability.py
src/mgmGrowth/tasks/superresolution/: README.md  __init__.py  config.py
src/mgmGrowth/utils/: __init__.py  flair2nrrd.py  statistical_manipulation.py  synthmorph_setup.py  transversal_axis_finder.py  voxel_spacing.py
utils/: masks_np.py
(+108 files in other folders)
