[project]
name = "Meningioma"
version = "1.0.0"
requires-python = ">=3.10"
description = "Meningioma package harbors every tools used for meningioma characterization and growth prediction."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Mario Pascual González", email = "mpascual@uma.es"},
  {name = "Computational Intelligence and Image Analysis lab (ICAI)"},
  {name = "Hospital Regional Universitario de Málaga"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
  'deep learning',
  'medical image analysis',
  'medical image segmentation',
]
dependencies = [
    "opencv-python-headless",
    "pynrrd",
    "SciencePlots",
    "openpyxl",
    "ipykernel",
    "gstools",
    "pyvista",
    "pyyaml",
    "natsort",
    "nipype",
    # From now-on, nnUNet dependencies
    "torch>=2.1.2",
    "acvl-utils>=0.2.3,<0.3",  # 0.3 may bring breaking changes. Careful!
    "dynamic-network-architectures>=0.3.1,<0.4",  # 0.3.1 and lower are supported, 0.4 may have breaking changes. Let's be careful here
    "tqdm",
    "dicom2nifti",
    "scipy",
    "batchgenerators>=0.25.1",
    "numpy>=1.24",
    "scikit-learn",
    "scikit-image>=0.19.3",
    "SimpleITK>=2.2.1",
    "pandas",
    "graphviz",
    'tifffile',
    'requests',
    "nibabel",
    "matplotlib",
    "seaborn",
    "imagecodecs",
    "yacs",
    "batchgeneratorsv2>=0.2",
    "einops",
    "blosc2>=3.0.0b1"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.urls]
"Repository" = "https://github.com/MarioPasc/Meningioma"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line_length = 88

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["scipy.*", "scienceplots", "pandas.*", "nrrd", "yaml"]