[project]
name = "mgmGrowth"
version = "0.1.0"
requires-python = ">=3.10"
description = "Meningioma package harbors every tools used for meningioma characterization and growth prediction."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Mario Pascual González", email = "mpascual@uma.es"},
  {name = "Computational Intelligence and Image Analysis lab (ICAI)"},
  {name = "Hospital Regional Universitario de Málaga"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
  'deep learning',
  'medical image analysis',
  'medical image segmentation',
]
dependencies = [
    # core I/O & numerics
    "numpy~=1.26",
    "scipy~=1.15",
    # imaging stack
    "scikit-image~=0.23",
    "SimpleITK~=2.3",
    "pynrrd",
    "nibabel",
    # modelling
    "torch~=2.2",
    "einops",
    # geo-stats (pin everything that back-jumps!)
    #"gstools~=1.7",
    #"hankel~=1.3",                 # explicit!
    # nnUNet ecosystem
    "acvl-utils==0.2.5",
    "connected-components-3d~=3.22",
    "dynamic-network-architectures~=0.3.1",
    "batchgenerators~=0.25",
    # misc
    "tqdm",
    "pandas",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
nnunet = [
  # installs from your GitHub repo’s default branch
  "nnunet @ git+https://github.com/MarioPasc/nnUNet.git@development#egg=nnunetv2"
]



[project.urls]
"Repository" = "https://github.com/MarioPasc/Meningioma"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line_length = 88

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["scipy.*", "scienceplots", "pandas.*", "nrrd", "yaml", "nipype.*"]