[project]
name = "mgmGrowth"
version = "0.1.0"
requires-python = ">=3.10"
description = "Meningioma package harbors every tools used for meningioma characterization and growth prediction."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Mario Pascual González", email = "mpascual@uma.es"},
  {name = "Computational Intelligence and Image Analysis lab (ICAI)"},
  {name = "Hospital Regional Universitario de Málaga"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
  'deep learning',
  'medical image analysis',
  'medical image segmentation',
]
dependencies = [
    # core I/O & numerics
    "numpy==1.23.5",
    "scipy~=1.15",
    # imaging stack
    "scikit-image~=0.23",
    "SimpleITK~=2.3",
    "pynrrd",
    "nibabel",
    "opencv-python-headless~=4.7; python_version >= '3.10'",
    # modelling
    "torch~=2.2",
    "einops",
    # core nnU-Net from GitHub repo’s development branch
    "nnunetv2 @ git+https://github.com/MarioPasc/nnUNet.git@development#egg=nnunetv2",    # GitLab-hosted smore 
    "smore @ git+https://gitlab.com/iacl/smore.git@v4.0.5#egg=smore",
    # nnUNet ecosystem
    "acvl-utils==0.2.5",
    "connected-components-3d~=3.22",
    "dynamic-network-architectures~=0.3.1",
    "batchgenerators~=0.25",
    # misc
    "tqdm",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "scienceplots",
    "lpips", # Perceptual Similarity Metric, for Super-resolution https://github.com/richzhang/PerceptualSimilarity 
    "pyradiomics"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Repository" = "https://github.com/MarioPasc/Meningioma"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["scipy.*", "scienceplots", "pandas.*", "nrrd", "yaml", "nipype.*"]